# sitewriter

./: .gitignore  Cargo.toml  LICENSE  README.md  oranda.json
.github/: FUNDING.yml
.github/workflows/: rust-clippy.yml  rust.yml  web.yml
benches/: benchmark.rs
examples/: gen_sitemap.rs
src/: lib.rs
