[package]
name = "sitewriter"
version = "1.0.1"
authors = ["Edgar <git@edgarluque.com>"]
edition = "2021"
description = "A sitemap writing library."
readme = "README.md"
documentation = "https://docs.rs/sitewriter"
repository = "https://github.com/edg-l/sitewriter"
license = "MIT"
keywords = ["sitemap", "sitemapindex", "xml", "parser"]
categories = ["parsing"]

[dependencies]
chrono = "0.4.24"
derive_builder = "0.12.0"
quick-xml = "0.29.0"
url = "2.3.1"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
