[package]
name = "sitewriter"
version = "1.0.4"
authors = ["Edgar <git@edgarluque.com>"]
edition = "2021"
description = "A sitemap writing library."
readme = "README.md"
documentation = "https://docs.rs/sitewriter"
repository = "https://github.com/edg-l/sitewriter"
license = "MIT"
keywords = ["sitemap", "sitemapindex", "xml", "parser"]
categories = ["parsing"]
resolver = "2"

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock"] }
derive_builder = "0.12.0"
quick-xml = { version = "0.31.0", default-features = false }
url = "2.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
